[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/fonts/64x.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/world_icons.png" type="Texture" id=2]
[ext_resource path="res://ui/fade_player/fade_player.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.38, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "level"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.35, 0.35, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.366, 0.366, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 9, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 18, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 27, 0, 9, 16 )

[node name="FadePlayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 3 )
color_world_1 = Color( 0.137255, 0.509804, 0.529412, 1 )
color_world_2 = Color( 0.141176, 0.12549, 0.0235294, 1 )
color_world_3 = Color( 0.439216, 0.439216, 0.439216, 1 )
color_world_4 = Color( 0.137255, 0, 0.0588235, 1 )

[node name="FadeRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
pause_mode = 2
anims/fade = SubResource( 1 )

[node name="Control" type="Control" parent="FadeRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect/Control"]
anims/level = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="FadeRect/Control"]
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.366
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="FadeRect/Control/HBoxContainer"]
margin_left = 638.0
margin_right = 638.0
margin_bottom = 40.0
mouse_filter = 2

[node name="WorldIcons" type="VBoxContainer" parent="FadeRect/Control/HBoxContainer/Control"]
anchor_top = -1.0
margin_left = -101.0
margin_right = -4.0
rect_scale = Vector2( 8, 8 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureRect" parent="FadeRect/Control/HBoxContainer/Control/WorldIcons"]
margin_right = 97.0
margin_bottom = 16.0
mouse_filter = 2
texture = SubResource( 3 )

[node name="2" type="TextureRect" parent="FadeRect/Control/HBoxContainer/Control/WorldIcons"]
visible = false
margin_top = 20.0
margin_right = 9.0
margin_bottom = 36.0
mouse_filter = 2
texture = SubResource( 4 )

[node name="3" type="TextureRect" parent="FadeRect/Control/HBoxContainer/Control/WorldIcons"]
visible = false
margin_top = 30.0
margin_right = 9.0
margin_bottom = 46.0
mouse_filter = 2
texture = SubResource( 5 )

[node name="4" type="TextureRect" parent="FadeRect/Control/HBoxContainer/Control/WorldIcons"]
visible = false
margin_top = 40.0
margin_right = 9.0
margin_bottom = 56.0
mouse_filter = 2
texture = SubResource( 6 )

[node name="Label" type="Label" parent="FadeRect/Control/HBoxContainer"]
margin_left = 642.0
margin_right = 642.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
